# mqtt-performance-test

./: Makefile  README.md  docker-compose.yml  pyproject.toml
config/: .env-example  mosquitto.conf
dockerfiles/: broker.Dockerfile  influxdb.Dockerfile
makefiles/: poetry.mk  quality.mk  workers.mk
src/application/services/: publisher.py  subscriber.py
src/application/workers/: publisher_worker.py  subscriber_worker.py
src/domain/entities/metrics/parameters/: time_series_data.py
src/domain/entities/mqtt/parameters/: mqtt_on_connect.py  mqtt_on_message.py  mqtt_on_publish.py
src/domain/interfaces/metrics/: time_series_database.py
src/domain/interfaces/mqtt/: mqtt_publisher.py  mqtt_subscriber.py
src/infrastructure/: logging.py  settings.py
src/infrastructure/common/: csv.py  time_measurement.py
src/infrastructure/metrics/: influxdb.py
src/infrastructure/mqtt/publishers/: paho_mqtt_publisher.py
src/infrastructure/mqtt/subscribers/: paho_mqtt_subscriber.py
