[tool.poetry]
name = "mqtt-performance-test"
version = "0.1.0"
description = "Testing MQTT communication performance using OTP and blockchain authentication"
authors = ["mdcg"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
paho-mqtt = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
unimport = "^1.2.1"

[tool.black]
exclude = '.venv|env'
line-length = 120
target-version = ['py39']

[tool.isort]
skip = ['.venv', 'env']
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.unimport]
exclude = '(__init__.py)|.venv|env'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
